all errors fixed
